<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Boot Wizard</string>
    <string name="action_settings">Settings</string>
    <string name="page0_title">Language Settings</string>
    <string name="page1_title">Date and Time Settings</string>
    <string name="page2_title">WIFI Settings</string>
    <string name="page3_title">SIM Settings</string>
    <string name="page4_title">Login account</string>
    <string name="page5_title">Done</string>
    <!-- 欢迎首页面 -->
    <string name="start">Start</string>
    <string name="welcome_to_use">Welcome to use Takee P1</string>
    <string name="welcome_to_use_in_here">In here, You will enjoy the best quality mobile Internet content and services</string>
    <!-- 语言设置 -->
    <string name="choose_language">Language Choose</string>
    <string name="language_chinese">中文（简体）</string>
    <string name="language_fanti">中文（繁體）</string>
    <string name="language_en">English</string>
    <!-- 时间日期设置 -->
    <string name="date_and_time_choose">Date and time choose</string>
    <string name="riqi">Date：</string>
    <string name="shijian">Time：</string>
    <string name="zidongshiyong">Automatically using the network time</string>
    <string name="date1">2015-01-01</string>
    <string name="date2">12：00</string>
    <!-- WiFi -->
    <string name="protect_by">Secured with %1$s</string>
    <string name="no_protect">Unprotected</string>
    <string name="signal_strength">Signal strength</string>
    <string name="security_level">Security</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Forget</string>
    <string name="cancel">Cancel</string>
    <string name="conn_status">Connection status</string>
    <string name="ip_address">IP address</string>
    <string name="connect_success">The connection is successful</string>
    <string name="connect_faild">WiFi connection failed</string>
    <string name="connected">Connected</string>
    <string name="defult_pwd">takee2015</string>
    <string name="defult_wifi_name">0000</string>
    <string name="add_network">Add network</string>
    <string name="add_network_ssid">SSID</string>
    <string name="security_none">None</string>
    <string name="security_wep">WEP</string>
    <string name="security_wpa_wpa2_psk">WPA/WPA2/PSK</string>
    <string name="security_eap">802.1x EAP</string>
    <string name="security_psk">WAPI PSK</string>
    <string name="security_wapi">WAPI Certificate</string>
    <string name="is_conncting">Connecting</string>
    <string name="wifi_disable">WIFI disable</string>
    <string name="wifi_disabling">WIFI disabling</string>
    <string name="wifi_enabling">WIFI enabling</string>
    <string name="update_on_loosen">Loosen to refresh</string>
    <string name="update_on_pull">Drop down to refresh</string>
    <string name="updating">Updating...</string>
    <string name="last_update_time">Last refresh: </string>
    <string name="no_wifi_data">No WiFi data</string>
    <!-- 准备就绪 -->
    <string name="kaishitiyan">Welcome to use robot</string>
    <string name="zhunbeijiuxu">ready</string>
    <string name="large_text">Large Text</string>
    <string name="ready_description">You have completed all the basic settings. Now,You can use your robot.You can also through the Settings in the Launcher to change these settings.</string>
</resources>