<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="280dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/welcome_to_use"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_use_in_here"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/startBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/start_btn_selector"
            android:paddingBottom="13dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="13dp"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_content_size" />
    </LinearLayout>

</LinearLayout>